--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -121,7 +121,7 @@
                                     <div class="stage" id="stage_6">
                                         <a href="stages\6\index.html"></a>
                                         <div class="thumbnail" id="thum6">
-                                            <img src="../images/stage_thumbnail/6.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/6.png" alt="">
                                         </div>
                                         <h1>title 6</h1>
                                     </div>
@@ -180,3 +180,4 @@
         </form>
     </body>
 </html>
+
