--- a/gamepage/stages/6/index.html
+++ b/gamepage/stages/6/index.html
@@ -13,6 +13,7 @@
 
         <script src="script.js" defer></script>
         <script src="../script_CheckClearIcon.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.20.0/matter.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body onload="onload();">
@@ -23,6 +24,7 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
+            <button id="permission">センサーの使用を許可する</button>
             <div id="frame_0" class="frame"></div>
             <div id="frame_1" class="frame"></div>
             <div id="frame_2" class="frame"></div>
