--- a/gamepage/stages/6/index.html
+++ b/gamepage/stages/6/index.html
@@ -24,7 +24,10 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
-            <button id="permission">センサーの使用を許可する</button>
+            <div id="caution">
+                <p>「画面の向き」をロックしてください</p>
+                <button id="permission">センサーの使用を許可してください</button>
+            </div>
             <div id="frame_0" class="frame"></div>
             <div id="frame_1" class="frame"></div>
             <div id="frame_2" class="frame"></div>
