--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -129,7 +129,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="levels" id="lev3">
+                    <!-- <div class="levels" id="lev3">
                         <p>Leve3</p>
                         <ul>
                             <li>
@@ -169,7 +169,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="container" id="rightContainer">
@@ -180,4 +180,3 @@
         </form>
     </body>
 </html>
-
