--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="images/Device__icon/apple-touch-icon.png">
+        <link rel="manifest" href="manifest.json">
 
         <script src="root/root.js" defer></script>
         <script src="script.js" defer></script>
@@ -108,3 +109,4 @@
         </div>
     </body>
 </html>
+
