--- a/gamepage/stages/1/index.html
+++ b/gamepage/stages/1/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=Edge">
-        <title>Device - gamepage</title>
+        <title>Device - stage1</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="../../../images/Device__icon/favicon.ico" sizes="32x32">
         <link rel="icon" href="../../../images/Device__icon/icon.svg" type="image/svg+xml">
