--- a/gamepage/stages/2/index.html
+++ b/gamepage/stages/2/index.html
@@ -22,17 +22,22 @@
             <div class="TextMask"><div class="text">B A C K</div></div>
         </div>
         <main>
-            <div id="symbol">
-                <dvi id="shader" class="symbolItem"></dvi>
-                <div id="object" class="symbolItem"></div>
-                <div id="semicircle-left" class="symbolItem"></div>
-                <div id="circle" class="symbolItem"></div>
-            </div>
-            <canvas id="particleCanvas"></canvas>
-            <div id="clearIcon" class="area clearIcon">
-                <div id="" class="outline clearIcon"></div>
-                <div id="" class="foundation clearIcon"></div>
-                <div id="checkbox_2_0" class="checkbox clearIcon"></div>
+            <div id="tabBar">
+                <div id="leftContent">
+                    <div id="symbol"></div>
+                    <canvas id="particleCanvas"></canvas>
+                    <div id="clearIcon" class="area clearIcon">
+                        <div id="" class="outline clearIcon"></div>
+                        <div id="" class="foundation clearIcon"></div>
+                        <div id="checkbox_2_0" class="checkbox clearIcon"></div>
+                    </div>
+                    <div id="Edge"></div>
+                    <div id="Chrome"></div>
+                    <div id="VSCode"></div>
+                </div>
+                <div id="rightContent">
+                    
+                </div>
             </div>
         </main>
         <script src="../../../root/root.js" defer></script>
