--- a/gamepage/stages/2/index.html
+++ b/gamepage/stages/2/index.html
@@ -36,7 +36,11 @@
                     <div id="VSCode"></div>
                 </div>
                 <div id="rightContent">
-                    
+                    <div id="time">
+                        <p>午後 01:50</p>
+                        <p>2026/01/26</p>
+                    </div>
+                    <div id="bell"></div>
                 </div>
             </div>
         </main>
