--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -137,5 +137,16 @@
                 </div>
             </div>
         </form>
+        <div id="downloadModal">
+            <div>
+                <p>セーブデータのダウンロード</p>
+                <a id="downloadLink" style="color:rgb(55, 73, 94); border-bottom: solid 1px rgb(55, 73, 94); padding-bottom: 3px;">ここをタップして保存</a>
+                <br><br>
+                <p>保存方法（例 iPhone）</p>
+                <p>その他… → ファイルに保存</p>
+                <br>
+                <button type="button" onclick="closeDownloadModal()">完了</button>
+            </div>
+        </div>
     </body>
 </html>
