--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -28,7 +28,7 @@
                     </ul>
                     <div class="temp">
                         <div id="loginNow">
-                            <p id="nowUserName">開発者</p>
+                            <p id="nowUserName"></p>
                             <button type="button" id="logoutButton"  class="stNumber my-contact-btn my-btn-animation" onclick="logout()">Log out</button>
                         </div>
                         <button type="button" id="loginButton"  class="stNumber my-contact-btn my-btn-animation" onclick="uploadSaveData()">Log in</button>
