--- a/gamepage/index.html
+++ b/gamepage/index.html
@@ -68,7 +68,7 @@
                                     <div class="stage" id="stage_2">
                                         <a href="stages\2\index.html"></a>
                                         <div class="thumbnail" id="thum2">
-                                            <img src="../images/stage_thumbnail/2.jpg" alt="">
+                                            <img src="../images/stage_thumbnail/2.png" alt="">
                                         </div>
                                         <h1>title 2</h1>
                                     </div>
