--- a/introduction/index.html
+++ b/introduction/index.html
@@ -25,6 +25,13 @@
                     <li><a href="../gamepage/index.html">ステージ選択</a></li>
                     <li><a href="index.html">紹介</a></li>
                 </ul>
+                <div class="temp">
+                    <div id="loginNow">
+                        <p id="nowUserName"></p>
+                        <button type="button" id="logoutButton"  class="stNumber my-contact-btn my-btn-animation" onclick="logout()">Log out</button>
+                    </div>
+                    <button type="button" id="loginButton"  class="stNumber my-contact-btn my-btn-animation" onclick="uploadSaveData()">Log in</button>
+                </div>
             </div>
             <div class="hamburger_button" id="js-hamburger">
                 <span></span>
