--- a/introduction/index.html
+++ b/introduction/index.html
@@ -12,7 +12,9 @@
         <link rel="icon" href="../images/Device__icon/icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="../images/Device__icon/apple-touch-icon.png">
 
+        <script src="../root/root.js" defer></script>
         <script src="script.js" defer></script>
+        <script src="../root/script_humburger.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body oncontextmenu="return false;"> <!-- 右クリック禁止令 -->
@@ -23,6 +25,13 @@
                     <li><a href="../gamepage/index.html">ステージ選択</a></li>
                     <li><a href="index.html">紹介</a></li>
                 </ul>
+                <div class="temp">
+                    <div id="loginNow">
+                        <p id="nowUserName"></p>
+                        <button type="button" id="logoutButton"  class="stNumber my-contact-btn my-btn-animation" onclick="logout()">Log out</button>
+                    </div>
+                    <button type="button" id="loginButton"  class="stNumber my-contact-btn my-btn-animation" onclick="uploadSaveData()">Log in</button>
+                </div>
             </div>
             <div class="hamburger_button" id="js-hamburger">
                 <span></span>
